Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
int sg_Audio_SoundEffectPlaying(void *effect);
void sg_Audio_StopMusic();
void sg_Audio_StopSoundEffect(void *effect);
int sg_Audio_TryOpenAudio();
point2d sg_Camera_CameraPos();
rectangle sg_Camera_CameraScreenRect();
float sg_Camera_CameraX();
float sg_Camera_CameraY();
void sg_Camera_CenterCameraOn(void *s, vector *offset);
void sg_Camera_CenterCameraOnCharacter(void *c, vector *offset);
void sg_Camera_CenterCameraOnWithXYOffset(void *s, int offsetX, int offsetY);
void sg_Camera_MoveCameraBy(vector *offset);
void sg_Camera_MoveCameraByXY(float dx, float dy);
void sg_Camera_MoveCameraTo(point2d *pt);
void sg_Camera_MoveCameraToXY(float x, float y);
int sg_Camera_PointOnScreen(point2d *pt);
int sg_Camera_RectOnScreen(rectangle *rect);
void sg_Camera_SetCameraPos(point2d *value);
void sg_Camera_SetCameraX(float value);
void sg_Camera_SetCameraY(float value);
point2d sg_Camera_ToScreen(point2d *worldPoint);
rectangle sg_Camera_ToScreenRect(rectangle *rect);
int sg_Camera_ToScreenX(float worldX);
int sg_Camera_ToScreenY(float worldY);
point2d sg_Camera_ToWorld(point2d *screenPoint);
float sg_Camera_ToWorldX(int screenX);
float sg_Camera_ToWorldY(int screenY);
unsigned char sg_Core_BlueOf(unsigned int c);
float sg_Core_BrightnessOf(unsigned int c);