ScreenSaver/lib/sgsdk.pas

  
  function sg_Audio_SoundEffectPlaying(effect: SoundEffect): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_SoundEffectPlaying');
    {$ENDIF}
    
    try
      result := sgAudio.SoundEffectPlaying(effect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_SoundEffectPlaying');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_SoundEffectPlaying');
    {$ENDIF}
  end;
  
  procedure sg_Audio_StopMusic(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_StopMusic');
    {$ENDIF}
  
    try 
      sgAudio.StopMusic();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_StopMusic');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_StopMusic');
    {$ENDIF}
  end;
  
  procedure sg_Audio_StopSoundEffect(effect: SoundEffect); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_StopSoundEffect');
    {$ENDIF}
  
    try 
      sgAudio.StopSoundEffect(effect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_StopSoundEffect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_StopSoundEffect');
    {$ENDIF}
  end;
  
  function sg_Audio_TryOpenAudio(): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Audio_TryOpenAudio');
    {$ENDIF}
    
    try
      result := sgAudio.TryOpenAudio();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Audio_TryOpenAudio');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Audio_TryOpenAudio');
    {$ENDIF}
  end;
  
  function sg_Camera_CameraPos(): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CameraPos');
    {$ENDIF}
    
    try
      result := sgCamera.CameraPos();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CameraPos');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CameraPos');
    {$ENDIF}
  end;
  
  function sg_Camera_CameraScreenRect(): Rectangle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CameraScreenRect');
    {$ENDIF}
    
    try
      result := sgCamera.CameraScreenRect();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CameraScreenRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CameraScreenRect');
    {$ENDIF}
  end;
  
  function sg_Camera_CameraX(): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CameraX');
    {$ENDIF}
    
    try
      result := sgCamera.CameraX();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CameraX');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CameraX');
    {$ENDIF}
  end;
  
  function sg_Camera_CameraY(): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CameraY');
    {$ENDIF}
    
    try
      result := sgCamera.CameraY();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CameraY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CameraY');
    {$ENDIF}
  end;
  
  procedure sg_Camera_CenterCameraOn(s: Sprite; var offset: Vector); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CenterCameraOn');
    {$ENDIF}
  
    try 
      sgCamera.CenterCameraOn(s, offset);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CenterCameraOn');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CenterCameraOn');
    {$ENDIF}
  end;
  
  procedure sg_Camera_CenterCameraOnCharacter(c: Character; var offset: Vector); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CenterCameraOnCharacter');
    {$ENDIF}
  
    try 
      sgCamera.CenterCameraOn(c, offset);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CenterCameraOnCharacter');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CenterCameraOnCharacter');
    {$ENDIF}
  end;
  
  procedure sg_Camera_CenterCameraOnWithXYOffset(s: Sprite; offsetX: LongInt; offsetY: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_CenterCameraOnWithXYOffset');
    {$ENDIF}
  
    try 
      sgCamera.CenterCameraOn(s, offsetX, offsetY);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_CenterCameraOnWithXYOffset');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_CenterCameraOnWithXYOffset');
    {$ENDIF}
  end;
  
  procedure sg_Camera_MoveCameraBy(var offset: Vector); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_MoveCameraBy');
    {$ENDIF}
  
    try 
      sgCamera.MoveCameraBy(offset);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_MoveCameraBy');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_MoveCameraBy');
    {$ENDIF}
  end;
  
  procedure sg_Camera_MoveCameraByXY(dx: Single; dy: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_MoveCameraByXY');
    {$ENDIF}
  
    try 
      sgCamera.MoveCameraBy(dx, dy);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_MoveCameraByXY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_MoveCameraByXY');
    {$ENDIF}
  end;
  
  procedure sg_Camera_MoveCameraTo(var pt: Point2D); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_MoveCameraTo');
    {$ENDIF}
  
    try 
      sgCamera.MoveCameraTo(pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_MoveCameraTo');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_MoveCameraTo');
    {$ENDIF}
  end;
  
  procedure sg_Camera_MoveCameraToXY(x: Single; y: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_MoveCameraToXY');
    {$ENDIF}
  
    try 
      sgCamera.MoveCameraTo(x, y);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_MoveCameraToXY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_MoveCameraToXY');
    {$ENDIF}
  end;
  
  function sg_Camera_PointOnScreen(var pt: Point2D): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_PointOnScreen');
    {$ENDIF}
    
    try
      result := sgCamera.PointOnScreen(pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_PointOnScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_PointOnScreen');
    {$ENDIF}
  end;
  
  function sg_Camera_RectOnScreen(var rect: Rectangle): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_RectOnScreen');
    {$ENDIF}
    
    try
      result := sgCamera.RectOnScreen(rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_RectOnScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_RectOnScreen');
    {$ENDIF}
  end;
  
  procedure sg_Camera_SetCameraPos(var value: Point2D); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_SetCameraPos');
    {$ENDIF}
  
    try 
      sgCamera.SetCameraPos(value);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_SetCameraPos');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_SetCameraPos');
    {$ENDIF}
  end;
  
  procedure sg_Camera_SetCameraX(value: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_SetCameraX');
    {$ENDIF}
  
    try 
      sgCamera.SetCameraX(value);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_SetCameraX');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_SetCameraX');
    {$ENDIF}
  end;
  
  procedure sg_Camera_SetCameraY(value: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_SetCameraY');
    {$ENDIF}
  
    try 
      sgCamera.SetCameraY(value);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_SetCameraY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_SetCameraY');
    {$ENDIF}
  end;
  
  function sg_Camera_ToScreen(var worldPoint: Point2D): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToScreen');
    {$ENDIF}
    
    try
      result := sgCamera.ToScreen(worldPoint);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToScreen');
    {$ENDIF}
  end;
  
  function sg_Camera_ToScreenRect(var rect: Rectangle): Rectangle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToScreenRect');
    {$ENDIF}
    
    try
      result := sgCamera.ToScreen(rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToScreenRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToScreenRect');
    {$ENDIF}
  end;
  
  function sg_Camera_ToScreenX(worldX: Single): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToScreenX');
    {$ENDIF}
    
    try
      result := sgCamera.ToScreenX(worldX);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToScreenX');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToScreenX');
    {$ENDIF}
  end;
  
  function sg_Camera_ToScreenY(worldY: Single): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToScreenY');
    {$ENDIF}
    
    try
      result := sgCamera.ToScreenY(worldY);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToScreenY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToScreenY');
    {$ENDIF}
  end;
  
  function sg_Camera_ToWorld(var screenPoint: Point2D): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToWorld');
    {$ENDIF}
    
    try
      result := sgCamera.ToWorld(screenPoint);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToWorld');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToWorld');
    {$ENDIF}
  end;
  
  function sg_Camera_ToWorldX(screenX: LongInt): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToWorldX');
    {$ENDIF}
    
    try
      result := sgCamera.ToWorldX(screenX);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToWorldX');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToWorldX');
    {$ENDIF}
  end;
  
  function sg_Camera_ToWorldY(screenY: LongInt): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Camera_ToWorldY');
    {$ENDIF}
    
    try
      result := sgCamera.ToWorldY(screenY);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Camera_ToWorldY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Camera_ToWorldY');
    {$ENDIF}
  end;
  
  function sg_Core_BlueOf(c: LongWord): Byte; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_BlueOf');
    {$ENDIF}
    
    try
      result := sgCore.BlueOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_BlueOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_BlueOf');
    {$ENDIF}
  end;
  
  function sg_Core_BrightnessOf(c: LongWord): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_BrightnessOf');
    {$ENDIF}
